--- a/examples/transcribe_rt/CMakeLists.txt
+++ b/examples/transcribe_rt/CMakeLists.txt
@@ -1,7 +1,7 @@
 # stream
-set(TARGET stream)
+set(TARGET transcribe_rt)
 add_executable(${TARGET} transcribe.cpp)
 
 include(DefaultTargetOptions)
 
-target_link_libraries(${TARGET} PRIVATE common miniaudio whisper ${CMAKE_THREAD_LIBS_INIT})
+target_link_libraries(${TARGET} PRIVATE common whisper ${CMAKE_THREAD_LIBS_INIT})
