Add ring buffer

--- a/examples/transcribe_rt/CMakeLists.txt
+++ b/examples/transcribe_rt/CMakeLists.txt
@@ -4,4 +4,5 @@ add_executable(${TARGET} transcribe.cpp)
 
 include(DefaultTargetOptions)
 
+target_include_directories(${TARGET} PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/readerwriterqueue)
 target_link_libraries(${TARGET} PRIVATE common whisper ${CMAKE_THREAD_LIBS_INIT})
